--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
-<div class="center">
-  <app-filter></app-filter>
-</div>
+<app-card-layout [keys]="tableKeys" [searchParams]="searchParams" [filteredOptions]="searchData" [title]="'Doug\'s Car Lot'">
+    <app-filter (keys)="bindTableKeys($event)" (carProperties)="onSearch($event)" (searchParams)="bindSearchParams($event)"></app-filter>
+    <app-table [keys]="tableKeys" [searchParams]="searchParams" [filteredOptions]="searchData"></app-table>
+</app-card-layout>
