--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -3,3 +3,13 @@ table {
   width: 100%;
   margin: 10px 0;
 }
+
+td, tr, th {
+    text-align: center;
+    border: 1px solid black;
+}
+
+th.mat-header-cell {
+    text-align: center;
+}
+
