--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <app-card-layout [keys]="tableKeys" [searchParams]="searchParams" [filteredOptions]="searchData" [title]="'Doug\'s Car Lot'">
     <app-filter (keys)="bindTableKeys($event)" (carProperties)="onSearch($event)" (searchParams)="bindSearchParams($event)"></app-filter>
-    <app-table [keys]="tableKeys" [searchParams]="searchParams" [filteredOptions]="searchData"></app-table>
+    <app-table [query]="query" [keys]="tableKeys" [searchParams]="searchParams" [filteredOptions]="searchData"></app-table>
 </app-card-layout>
