--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<table *ngIf="filteredOptions.length > 0" mat-table [dataSource]="filteredOptions" class="mat-elevation-z8">
+<table *ngIf="filteredOptions.length > 0 && searchFlag" mat-table [dataSource]="filteredOptions" class="mat-elevation-z8">
 
   <ng-container  *ngFor="let key of keys" matColumnDef="{{key}}">
     <th mat-header-cell *matHeaderCellDef> {{key | camelToHuman}} </th>
@@ -19,6 +19,6 @@
   <tr mat-row *matRowDef="let row; columns: keys;"></tr>
 </table>
 
-<mat-card class="no-results" *ngIf="filteredOptions.length === 0 && keys.length > 1">
+<mat-card class="no-results" *ngIf="filteredOptions.length === 0 && searchFlag">
     There are no results found.
 </mat-card>
