refactored layout component, had uneccesary inputs

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<app-card-layout [keys]="tableKeys" [searchParams]="searchParams" [filteredOptions]="searchData" [title]="'Doug\'s Car Lot'">
+<app-card-layout [title]="'Doug\'s Car Lot'">
     <app-filter
             [carListings]="carListings"
             [carMakes]="carMakes"
