update table styling

--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -4,9 +4,8 @@ table {
   margin: 10px 0;
 }
 
-td, tr, th {
+td, tr {
     text-align: center;
-    border: 1px solid black;
 }
 
 th.mat-header-cell {
