--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,5 +1,5 @@
 <app-card-layout [title]="'Doug\'s Car Lot'">
-    <app-filter
+    <app-home-filter
             [carMakes]="carMakes"
             [carYears]="carYears"
             [carColors]="carColors"
@@ -7,7 +7,7 @@
             (carProperties)="onSearch($event)"
             (searchParams)="bindSearchParams($event)"
             (searchFlag)="bindSearchFlag($event)"
-    ></app-filter>
+    ></app-home-filter>
     <app-table
             [query]="query"
             [keys]="tableKeys"
